--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1311,6 +1311,14 @@ gap: 30px;
 .Pricing .row .out_box .card .close .Available .Properties{
 width: 430px;
 }
+/*Our_Courses */
+
+.Our_Courses .row .Courses .card{
+    width:500px ;
+   
+    flex-grow: 1;
+    flex-basis: 400px;
+}
 
 
     /* footer*/
