--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1302,18 +1302,16 @@ gap: 30px;
 
 
 @media screen and (max-width: 700px){
+
+    .ROW p{
+        width: 350px;
+    }
     /*Home */
     .section1 .sec_3{
         width: 500px;
     }
     /* Benefits */
-    .Benefits .ROW p{
-        width: 600px;
-        font-size: 16px;
-        font-weight: 400;
-        color:  #59595A;
     
-    }
 
     /*Pricing */
 
@@ -1327,7 +1325,8 @@ width: 430px;
 /*Our_Courses */
 
 .Our_Courses .row .Courses .card{
-    flex: 1 1 50%;
+   width: 500px;
+
 }
 
 
@@ -1377,12 +1376,27 @@ width: 430px;
 }
 @media screen and (max-width: 600px){
     /*Home*/
+
+    .Home .section1{
+        height: 500px;
+        width: 400px;
+       
+        }
+        
+        .section1 .out .sec_1{
+            width: 500px;
+        }
+
     .Home .section1 .out .sec_1  {
         width: 500px;
         height: 70px;
         
         
        }
+       /*.section3 .img{
+        width: 100%;
+        height: 750px;}*/
+
        .Home .section1 .out .sec_1 h1{
            font-size:20px ;
        }
@@ -1397,24 +1411,16 @@ width: 430px;
         padding: 30px;
        
      }
-     /* Benefits */
-    .Benefits .ROW p{
-        width: 500px;
-        font-size: 16px;
-        font-weight: 400;
-        color:  #59595A;
     
-    }
+
+
 
 /*Our_Courses */
 
 .Our_Courses .row .Courses .card{
-    width:550px ;
-   
-    flex-grow: 1;
-    flex-basis: 400px;
-}
-
+    width: 500px;
+ 
+ }
 /*Benefits */
 .items_Container .Row .card .card_content h4{
     font-size: 15px;
@@ -1497,6 +1503,11 @@ width: 340px;
 height: 4350px ;
 
 }
+
+.Our_Courses .row .Courses .card{
+    width: 400px;
+ 
+ }
 .Pricing .row .ROW .left_side{
     height: 60px;
     position: relative;
