--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1189,7 +1189,14 @@ margin-top: 10px;
     gap: 20px;
 }
 .Benefits .row .ROW p{
-    width:  550px;
+    width:  500px;
+}
+.items_Container .Row .card .card_content h4{
+    font-size: 20px;
+    
+    width: 350px;
+  
+       
 }
 
 /*Our_Courses */
@@ -1502,6 +1509,7 @@ width: 340px;
 .Our_Courses{
 height: 4350px ;
 
+
 }
 
 .Our_Courses .row .Courses .card{
@@ -1534,4 +1542,43 @@ height: 4350px ;
      
 }
 
+@media screen and (max-width: 400px){
+ /* Home*/   
+ .section2 img{
+ 
+    width: 100px ;
+    height:80px ;
+  
+ }
+ .Home .section3 .img {
+    width: 300px;
 
+}
+/*Benefits */
+.items_Container .Row .card .card_content h4{
+    font-size: 11px;
+    font-weight: 600;
+    width: 300px;
+   height: 20px;
+       
+}
+.Benefits .row .ROW p{
+    width: 300px;
+}
+.Our_Courses .row .ROW p{
+    width: 300px;
+}
+.Testimonials .row .ROW p{
+    width: 300px;
+}
+.Pricing .row .ROW p{
+    width: 300px;
+}
+/*Our_Courses */
+
+.Our_Courses .row .Courses .card{
+    width: 300px;
+ 
+ }
+
+}
